Fix alignment issues with tinymce content

--- a/client/src/app/components/home/home.scss
+++ b/client/src/app/components/home/home.scss
@@ -1,9 +1,9 @@
 @import '../../globals.scss';
 
 .event-list-container {
-  background-color: $color-body2;
+  background-color: $color-light-background;
   padding: 20px;
-  border: black solid 1px;
+  border: $color-light-gray solid 1px;
   border-radius: 2px;
 
   color: $color-font-dark-gray;
